删除了多余的文字和border

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="content">
-      <aside>一行有六个字</aside>
+      <aside></aside>
       <main></main>
       <div class="ad"></div>
     </div>
